# GSEMO

./: .gitignore  CMakeLists.txt  external  figures.ipynb  gsemo.cpp  include  plt_gif.py  postprocessing.py  problems_gecco23.cpp  problems_gecco23.hpp  process_metric.py  run.py  setup.py
gsemo/: __init__.py
src/: agsemo.cpp  agsemo.hpp  gsemo.hpp  interface.cpp  main.cpp  problems.cpp  problems.hpp
